fix the bug with wrapping of text

--- a/frontend/src/global_styles/_global.scss
+++ b/frontend/src/global_styles/_global.scss
@@ -10,6 +10,7 @@ html, body {
 }
 p, h1,h2,h3,h4 a{
   color: var(--text);
+  overflow-wrap: anywhere;
 }
 //same here as mentioned above
 :root{
